fix: layout bug at extreme zoom levels

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: 18rem 1fr;
-    grid-template-rows: 5rem 5rem 1fr;
+    grid-template-rows: 5rem 5rem auto;
     font-family: "Roboto", sans-serif;
 }
 
